Deploy latest version of PFS documents fbbd669546a04ca06ec8615ac99adf2df258e804

--- a/latest/SAR-ORB.html
+++ b/latest/SAR-ORB.html
@@ -1221,7 +1221,10 @@ power*)</li>
 desired as this step can be completed by the user if necessary.</li>
 </ol>
 <h5 id="goal-requirements-39">Goal requirements:</h5>
-<p>As threshold. <!-- *None* --></p>
+<p>Radiometrically Terrain-corrected Sigma-Nought backscatter
+coefficient
+(<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><msubsup><mi>σ</mi><mi>T</mi><mn>0</mn></msubsup><annotation encoding="application/x-tex">\sigma^0_T</annotation></semantics></math>)
+is provided for each polarization.</p>
 <hr />
 <h4 data-label="|Radiometrically Corrected Measurements: Scaling Conversion" id="sec:rcm.metadata-scaling-conversion"><!-- edit:requirements/metadata/scaling-conversion.yaml--><code>5.2.</code>
 Scaling Conversion</h4>
