Deploy latest version of PFS documents bdaf6fa3420ecda78a2a25f2678411bf3d688639

--- a/latest/SAR-GSLC.html
+++ b/latest/SAR-GSLC.html
@@ -1324,7 +1324,8 @@ power*)</li>
 <p>Notes:</p>
 <ol type="1">
 <li>Transformation to the logarithm decibel scale is not required or
-desired as this step can be completed by the user if necessary.</li>
+desired as this step can be easily completed by the user if
+necessary.</li>
 </ol>
 <h5 id="goal-requirements-44">Goal requirements:</h5>
 <p>As threshold. <!-- *None* --></p>
