--- a/latest/SAR-ORB.html
+++ b/latest/SAR-ORB.html
@@ -1218,7 +1218,8 @@ power*)</li>
 <p>Notes:</p>
 <ol type="1">
 <li>Transformation to the logarithm decibel scale is not required or
-desired as this step can be completed by the user if necessary.</li>
+desired as this step can be easily completed by the user if
+necessary.</li>
 </ol>
 <h5 id="goal-requirements-39">Goal requirements:</h5>
 <p>Radiometrically Terrain-corrected Sigma-Nought backscatter
