Deploy latest version of PFS documents de6cd2fd84cb79a4940a81cf96af1950cbe3f55b

--- a/latest/ST.html
+++ b/latest/ST.html
@@ -343,35 +343,35 @@ land measurements, requiring atmospheric corrections.</p>
 <div style="page-break-after: always;"></div>
 <h2 id="definitions-and-abbreviations">Definitions and
 Abbreviations</h2>
-<!-- edit:glossary/ceos-ard.yaml -->
+<!-- edit:/home/runner/work/ceos-ard/ceos-ard/glossary/ceos-ard.yaml -->
 <dl>
 <dt>CEOS-ARD</dt>
 <dd>
 Committee on Earth Observation Satellites - Analysis Ready Data
 </dd>
 </dl>
-<!-- edit:glossary/doi.yaml -->
+<!-- edit:/home/runner/work/ceos-ard/ceos-ard/glossary/doi.yaml -->
 <dl>
 <dt>DOI</dt>
 <dd>
 Digital Object Identifier
 </dd>
 </dl>
-<!-- edit:glossary/lst.yaml -->
+<!-- edit:/home/runner/work/ceos-ard/ceos-ard/glossary/lst.yaml -->
 <dl>
 <dt>LST</dt>
 <dd>
 Land Surface Temperature
 </dd>
 </dl>
-<!-- edit:glossary/sbt.yaml -->
+<!-- edit:/home/runner/work/ceos-ard/ceos-ard/glossary/sbt.yaml -->
 <dl>
 <dt>SBT</dt>
 <dd>
 Surface Brightness Temperature
 </dd>
 </dl>
-<!-- edit:glossary/si.yaml -->
+<!-- edit:/home/runner/work/ceos-ard/ceos-ard/glossary/si.yaml -->
 <dl>
 <dt>SI</dt>
 <dd>
@@ -379,14 +379,14 @@ International System of Units, internationally known by the abbreviation
 SI (from French Système international d’unités)
 </dd>
 </dl>
-<!-- edit:glossary/st.yaml -->
+<!-- edit:/home/runner/work/ceos-ard/ceos-ard/glossary/st.yaml -->
 <dl>
 <dt>ST</dt>
 <dd>
 Surface Temperature
 </dd>
 </dl>
-<!-- edit:glossary/tir.yaml -->
+<!-- edit:/home/runner/work/ceos-ard/ceos-ard/glossary/tir.yaml -->
 <dl>
 <dt>TIR</dt>
 <dd>
@@ -401,14 +401,14 @@ stable and may change or may be removed at any time. Do
 requirements! Instead, use the textual identifier that is provided in
 brackets directly after the title.</p>
 <!-- todo: remove requirement numbers -->
-<h3 data-label="|General Metadata" id="sec:meta"><!-- edit:sections/requirement-categories/general-metadata.yaml--><code>1.</code>
+<h3 data-label="|General Metadata" id="sec:meta"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/sections/requirement-categories/general-metadata.yaml--><code>1.</code>
 General Metadata</h3>
 <p>These are metadata records describing a distributed collection of
 pixels. The collection of pixels referred to must be contiguous in space
 and time. General metadata should allow the user to assess the
 <em>overall</em> suitability of the dataset, and must meet the
 requirements listed below.</p>
-<h4 data-label="|General Metadata: Traceability" id="sec:meta.metadata-traceability-st"><!-- edit:requirements/metadata/traceability-st.yaml--><code>1.1.</code>
+<h4 data-label="|General Metadata: Traceability" id="sec:meta.metadata-traceability-st"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/metadata/traceability-st.yaml--><code>1.1.</code>
 Traceability</h4>
 <p>Identifier: <code>meta.metadata-traceability-st</code></p>
 <h5 id="threshold-requirements">Threshold requirements:</h5>
@@ -425,12 +425,12 @@ estimate of measurement uncertainty.</li>
 <li>Information on traceability should be available in the metadata as a
 single DOI landing page.</li>
 </ol>
-<h3 data-label="|Source Metadata" id="sec:src"><!-- edit:sections/requirement-categories/source-metadata.yaml--><code>2.</code>
+<h3 data-label="|Source Metadata" id="sec:src"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/sections/requirement-categories/source-metadata.yaml--><code>2.</code>
 Source Metadata</h3>
 <p>These are metadata records describing (detailing)
 <strong>each</strong> acquisition (source data) used to generate the ARD
 product. This may be one or mutliple acquisitions.</p>
-<h4 data-label="|Source Metadata: Example Requirement" id="sec:src.example"><!-- edit:requirements/example.yaml--><code>2.1.</code>
+<h4 data-label="|Source Metadata: Example Requirement" id="sec:src.example"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/example.yaml--><code>2.1.</code>
 Example Requirement</h4>
 <p>Identifier: <code>src.example</code></p>
 <p>This is an example requirement.</p>
@@ -442,11 +442,11 @@ Example Requirement</h4>
 <ol type="1">
 <li>This is a note.</li>
 </ol>
-<h3 data-label="|Product Metadata" id="sec:prd"><!-- edit:sections/requirement-categories/product-metadata.yaml--><code>3.</code>
+<h3 data-label="|Product Metadata" id="sec:prd"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/sections/requirement-categories/product-metadata.yaml--><code>3.</code>
 Product Metadata</h3>
 <p>Information related to the CEOS-ARD product generation procedure and
 geographic parameters.</p>
-<h4 data-label="|Product Metadata: Example Requirement" id="sec:prd.example"><!-- edit:requirements/example.yaml--><code>3.1.</code>
+<h4 data-label="|Product Metadata: Example Requirement" id="sec:prd.example"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/example.yaml--><code>3.1.</code>
 Example Requirement</h4>
 <p>Identifier: <code>prd.example</code></p>
 <p>This is an example requirement.</p>
@@ -458,7 +458,7 @@ Example Requirement</h4>
 <ol type="1">
 <li>This is a note.</li>
 </ol>
-<h3 data-label="|Per-Pixel Metadata" id="sec:pxl"><!-- edit:sections/requirement-categories/per-pixel-metadata.yaml--><code>4.</code>
+<h3 data-label="|Per-Pixel Metadata" id="sec:pxl"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/sections/requirement-categories/per-pixel-metadata.yaml--><code>4.</code>
 Per-Pixel Metadata</h3>
 <p>The following minimum metadata specifications apply to each pixel.
 Whether the metadata are provided in a single record relevant to all
@@ -467,7 +467,7 @@ provider. Per-pixel metadata should allow users to discriminate between
 (choose) observations on the basis of their individual suitability for
 applications.</p>
 <p><em>Cloud optimized file formats are recommended.</em></p>
-<h4 data-label="|Per-Pixel Metadata: Example Requirement" id="sec:pxl.example"><!-- edit:requirements/example.yaml--><code>4.1.</code>
+<h4 data-label="|Per-Pixel Metadata: Example Requirement" id="sec:pxl.example"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/example.yaml--><code>4.1.</code>
 Example Requirement</h4>
 <p>Identifier: <code>pxl.example</code></p>
 <p>This is an example requirement.</p>
@@ -479,14 +479,14 @@ Example Requirement</h4>
 <ol type="1">
 <li>This is a note.</li>
 </ol>
-<h3 data-label="|Radiometric and Atmospheric Corrections" id="sec:rac"><!-- edit:sections/requirement-categories/radiometric-atmospheric-corrections.yaml--><code>5.</code>
+<h3 data-label="|Radiometric and Atmospheric Corrections" id="sec:rac"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/sections/requirement-categories/radiometric-atmospheric-corrections.yaml--><code>5.</code>
 Radiometric and Atmospheric Corrections</h3>
 <p>The following requirements must be met for all pixels in a
 collection. The requirements indicate both the necessary outcomes and
 the minimum steps necessary to be deemed to have achieved those
 outcomes. Radiometric corrections must lead to a valid measurement of
 surface reflectance.</p>
-<h4 data-label="|Radiometric and Atmospheric Corrections: Measurement Uncertainty" id="sec:rac.measurements-uncertainty-st"><!-- edit:requirements/measurements/uncertainty-st.yaml--><code>5.1.</code>
+<h4 data-label="|Radiometric and Atmospheric Corrections: Measurement Uncertainty" id="sec:rac.measurements-uncertainty-st"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/measurements/uncertainty-st.yaml--><code>5.1.</code>
 Measurement Uncertainty</h4>
 <p>Identifier: <code>rac.measurements-uncertainty-st</code></p>
 <p>Note: In current practice, users determine fitness for purpose based
@@ -505,7 +505,7 @@ of the surface temperature for each pixel is also accompanied by
 distance from cloud (above) and atmospheric transmission (intervals,
 i.e., 0.4 - 0.55, 0.55 - 0.7, etc.).</li>
 </ol>
-<h3 data-label="|Geometric Corrections" id="sec:gcor"><!-- edit:sections/requirement-categories/geometric-corrections.yaml--><code>6.</code>
+<h3 data-label="|Geometric Corrections" id="sec:gcor"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/sections/requirement-categories/geometric-corrections.yaml--><code>6.</code>
 Geometric Corrections</h3>
 <p>The geometric corrections are steps that are taken to place the
 measurement accurately on the surface of the Earth (that is, to
@@ -513,7 +513,7 @@ geolocate the measurement) allowing measurements taken through time to
 be compared. This section specifies any geometric correction
 requirements that must be met in order for the data to be analysis
 ready.</p>
-<h4 data-label="|Geometric Corrections: Example Requirement" id="sec:gcor.example"><!-- edit:requirements/example.yaml--><code>6.1.</code>
+<h4 data-label="|Geometric Corrections: Example Requirement" id="sec:gcor.example"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/example.yaml--><code>6.1.</code>
 Example Requirement</h4>
 <p>Identifier: <code>gcor.example</code></p>
 <p>This is an example requirement.</p>
@@ -531,7 +531,7 @@ Example Requirement</h4>
 the processing steps that can be used to achieve analysis ready data for
 a specific and well-developed Product Family Specification. This
 Guidance material does not replace or override the specifications.</p>
-<h3 data-label="|What is CEOS Analysis Ready Data?" id="sec:intro-what-are-ceos-ard-products"><!-- edit:sections/introduction/what-are-ceos-ard-products.yaml-->What
+<h3 data-label="|What is CEOS Analysis Ready Data?" id="sec:intro-what-are-ceos-ard-products"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/sections/introduction/what-are-ceos-ard-products.yaml-->What
 is CEOS Analysis Ready Data?</h3>
 <p>CEOS-ARD are products that have been processed to a minimum set of
 requirements and organized into a form that allows immediate analysis
@@ -547,7 +547,7 @@ exploitation via high-performance computing, cloud computing and other
 future data architectures. They may not be suitable for all purposes and
 are not intended as a <em>replacement</em> for other types of satellite
 products.</p>
-<h3 data-label="|When can a product be called CEOS-ARD?" id="sec:intro-when-is-a-product-ceos-ard"><!-- edit:sections/introduction/when-is-a-product-ceos-ard.yaml-->When
+<h3 data-label="|When can a product be called CEOS-ARD?" id="sec:intro-when-is-a-product-ceos-ard"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/sections/introduction/when-is-a-product-ceos-ard.yaml-->When
 can a product be called CEOS-ARD?</h3>
 <p>The CEOS-ARD branding is applied to a particular product once:</p>
 <ul>
@@ -563,7 +563,7 @@ Governance Framework</a>.</p>
 <p>A product can continue to use CEOS-ARD branding as long as its
 generation and distribution remain consistent with the peer-reviewed
 assessment.</p>
-<h3 data-label="|What is the difference between Threshold and Goal?" id="sec:intro-difference-threshold-goal"><!-- edit:sections/introduction/difference-threshold-goal.yaml-->What
+<h3 data-label="|What is the difference between Threshold and Goal?" id="sec:intro-difference-threshold-goal"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/sections/introduction/difference-threshold-goal.yaml-->What
 is the difference between Threshold and Goal?</h3>
 <p><strong>Threshold</strong> (Minimum) requirements are the
 <strong>minimum</strong> that is needed for the data to be analysis
@@ -608,7 +608,7 @@ https://doi.org/<a href="https://doi.org/10.1016/j.rse.2012.12.008">https://doi.
 </div>
 <div style="page-break-after: always;"></div>
 <h2 id="annexes">Annexes</h2>
-<h3 data-label="|CEOS-ARD ST Requirement Examples" id="sec:annex-st-metadata-examples"><!-- edit:sections/annexes/st-metadata-examples.yaml-->CEOS-ARD
+<h3 data-label="|CEOS-ARD ST Requirement Examples" id="sec:annex-st-metadata-examples"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/sections/annexes/st-metadata-examples.yaml-->CEOS-ARD
 ST Requirement Examples</h3>
 <h3 id="general-metadata">General Metadata</h3>
 <h4 id="traceability">Traceability</h4>
