Deploy latest version of PFS documents fd306ba8ad62d546455491aed6df02a826bb1221

--- a/latest/NLSR.html
+++ b/latest/NLSR.html
@@ -7,15 +7,21 @@
   <title>CEOS-ARD - Optical - Nighttime Light Surface Radiance - Version 1.1-draft</title>
   <style>
 body {
-margin: 0 auto;
-max-width: 44em;
-padding: 1em;
+margin: 0;
+padding: 0;
 hyphens: auto;
 overflow-wrap: break-word;
 text-rendering: optimizeLegibility;
 font-kerning: normal;
 font-size: 12pt;
 font-family: Aptos, sans-serif;
+}
+@media screen {
+body {
+max-width: 44em;
+margin: 0 auto;
+padding: 1em;
+}
 }
 @media (max-width: 600px) {
 body {
@@ -315,11 +321,11 @@ Visible
 </dl>
 <div style="page-break-after: always;"></div>
 <h2 id="requirements"><!-- edit:pfs/NLSR/requirements.yaml -->Requirements</h2>
-<p><strong>WARNING:</strong> The requirement numbers below are not
-stable and may change or may be removed at any time. Do
-<strong>not</strong> use the numbers to refer back to specific
-requirements! Instead, use the textual identifier that is provided in
-brackets directly after the title.</p>
+<p><strong>WARNING:</strong> The section numbers in front of the title
+(e.g. 1.1) are not stable and may change or may be removed at any time.
+Do <strong>not</strong> use the numbers to refer back to specific
+requirements! Instead, use the textual identifier that is provided below
+the title.</p>
 <!-- todo: remove requirement numbers -->
 <h3 data-label="|General Metadata" id="sec:meta"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/sections/requirement-categories/general-metadata.yaml--><code>1.</code>
 General Metadata</h3>
