Deploy latest version of PFS documents ce74de48b4b979206dbe67b76754610c3feeabf3

--- a/latest/SAR-GSLC.html
+++ b/latest/SAR-GSLC.html
@@ -477,6 +477,13 @@ Polarimetric Radar
 Polarimetric Signal-to-Noise Level Ratio
 </dd>
 </dl>
+<!-- edit:/home/runner/work/ceos-ard/ceos-ard/glossary/rrmse.yaml -->
+<dl>
+<dt>rRMSE</dt>
+<dd>
+Radial Root Mean Square Error
+</dd>
+</dl>
 <!-- edit:/home/runner/work/ceos-ard/ceos-ard/glossary/rtc.yaml -->
 <dl>
 <dt>RTC</dt>
@@ -881,9 +888,9 @@ Product Resolution</h4>
 <li>Rows</li>
 </ul>
 <hr />
-<h4 data-label="|Product Metadata: Product Bounding Box" id="sec:prd.metadata-bounding-box"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/metadata/bounding-box.yaml--><code>3.5.</code>
+<h4 data-label="|Product Metadata: Product Bounding Box" id="sec:prd.metadata-geo-bbox"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/metadata/geo-bbox.yaml--><code>3.5.</code>
 Product Bounding Box</h4>
-<p>Identifier: <code>prd.metadata-bounding-box</code></p>
+<p>Identifier: <code>prd.metadata-geo-bbox</code></p>
 <h5 id="threshold-requirements-22">Threshold requirements:</h5>
 <p>Two opposite corners of the product file (bounding box, including any
 zero-fill values) are identified, expressed in the coordinate reference
@@ -897,9 +904,9 @@ the Antemeridian, or the North or the South Pole.</li>
 <h5 id="goal-requirements-22">Goal requirements:</h5>
 <p>As threshold. <!-- *None* --></p>
 <hr />
-<h4 data-label="|Product Metadata: Product Geographical Extent" id="sec:prd.metadata-footprint"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/metadata/footprint.yaml--><code>3.6.</code>
+<h4 data-label="|Product Metadata: Product Geographical Extent" id="sec:prd.metadata-geo-area"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/metadata/geo-area.yaml--><code>3.6.</code>
 Product Geographical Extent</h4>
-<p>Identifier: <code>prd.metadata-footprint</code></p>
+<p>Identifier: <code>prd.metadata-geo-area</code></p>
 <h5 id="threshold-requirements-23">Threshold requirements:</h5>
 <p>The geometry of the SAR image footprint expressed in WGS84, in a
 standardised format (e.g., WKT Polygon).</p>
@@ -1363,10 +1370,10 @@ overall scene noise and scene edge artefacts, respectively.</li>
 <h5 id="goal-requirements-46">Goal requirements:</h5>
 <p>As threshold. <!-- *None* --></p>
 <hr />
-<h4 data-label="|Radiometrically Corrected Measurements: Radiometric Terrain Correction Algorithm" id="sec:rcm.corrections-radiometric-terrain-correction-gslc"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/corrections/radiometric-terrain-correction-gslc.yaml--><code>5.4.</code>
+<h4 data-label="|Radiometrically Corrected Measurements: Radiometric Terrain Correction Algorithm" id="sec:rcm.corrections-radiometric-terrain-algo-gslc"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/corrections/radiometric-terrain-algo-gslc.yaml--><code>5.4.</code>
 Radiometric Terrain Correction Algorithm</h4>
 <p>Identifier:
-<code>rcm.corrections-radiometric-terrain-correction-gslc</code></p>
+<code>rcm.corrections-radiometric-terrain-algo-gslc</code></p>
 <h5 id="threshold-requirements-47">Threshold requirements:</h5>
 <p>Not required. <!-- *None* --></p>
 <h5 id="goal-requirements-47">Goal requirements:</h5>
