--- a/latest/SAR-ORB.html
+++ b/latest/SAR-ORB.html
@@ -456,6 +456,13 @@ Polarimetric Radar
 Polarimetric Signal-to-Noise Level Ratio
 </dd>
 </dl>
+<!-- edit:/home/runner/work/ceos-ard/ceos-ard/glossary/rrmse.yaml -->
+<dl>
+<dt>rRMSE</dt>
+<dd>
+Radial Root Mean Square Error
+</dd>
+</dl>
 <!-- edit:/home/runner/work/ceos-ard/ceos-ard/glossary/rtc.yaml -->
 <dl>
 <dt>RTC</dt>
@@ -886,9 +893,9 @@ Product Filtering</h4>
 <h5 id="goal-requirements-23">Goal requirements:</h5>
 <p>As threshold. <!-- *None* --></p>
 <hr />
-<h4 data-label="|Product Metadata: Product Bounding Box" id="sec:prd.metadata-bounding-box"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/metadata/bounding-box.yaml--><code>3.7.</code>
+<h4 data-label="|Product Metadata: Product Bounding Box" id="sec:prd.metadata-geo-bbox"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/metadata/geo-bbox.yaml--><code>3.7.</code>
 Product Bounding Box</h4>
-<p>Identifier: <code>prd.metadata-bounding-box</code></p>
+<p>Identifier: <code>prd.metadata-geo-bbox</code></p>
 <h5 id="threshold-requirements-24">Threshold requirements:</h5>
 <p>Two opposite corners of the product file (bounding box, including any
 zero-fill values) are identified, expressed in the coordinate reference
@@ -902,9 +909,9 @@ the Antemeridian, or the North or the South Pole.</li>
 <h5 id="goal-requirements-24">Goal requirements:</h5>
 <p>As threshold. <!-- *None* --></p>
 <hr />
-<h4 data-label="|Product Metadata: Product Geographical Extent" id="sec:prd.metadata-footprint"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/metadata/footprint.yaml--><code>3.8.</code>
+<h4 data-label="|Product Metadata: Product Geographical Extent" id="sec:prd.metadata-geo-area"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/metadata/geo-area.yaml--><code>3.8.</code>
 Product Geographical Extent</h4>
-<p>Identifier: <code>prd.metadata-footprint</code></p>
+<p>Identifier: <code>prd.metadata-geo-area</code></p>
 <h5 id="threshold-requirements-25">Threshold requirements:</h5>
 <p>The geometry of the SAR image footprint expressed in WGS84, in a
 standardised format (e.g., WKT Polygon).</p>
