--- a/latest/SR.html
+++ b/latest/SR.html
@@ -416,8 +416,7 @@ Radiometric and Atmospheric Corrections</h3>
 <p>The following requirements must be met for all pixels in a
 collection. The requirements indicate both the necessary outcomes and
 the minimum steps necessary to be deemed to have achieved those
-outcomes. Radiometric corrections must lead to a valid measurement of
-surface reflectance.</p>
+outcomes. Radiometric corrections must lead to a valid measurement.</p>
 <h4 data-label="|Radiometric and Atmospheric Corrections: Measurement Uncertainty" id="sec:rac.measurements-uncertainty"><!-- edit:/home/runner/work/ceos-ard/ceos-ard/requirements/measurements/uncertainty.yaml--><code>5.1.</code>
 Measurement Uncertainty</h4>
 <p>Identifier: <code>rac.measurements-uncertainty</code></p>
